src/objects/Issue__c.object
<CustomObject>
    <description>Used to track the issues for the publications sold by AAFP.</description>
    <fields>
        <fullName>Issue_Volume__c</fullName>
        <label>Issue/Volume #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>status 1</fullName>
                </value>
                <value>
                    <fullName>status 2</fullName>
                </value>
                <value>
                    <fullName>status 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>